nivasa-macros/tests/trybuild/websocket_gateway_invalid_target.stderr
error: `#[websocket_gateway]` only supports structs
 --> tests/trybuild/websocket_gateway_invalid_target.rs:3:1
  |
3 | #[websocket_gateway("/ws")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `websocket_gateway` (in Nightly builds, run with -Z macro-backtrace for more info)
