nivasa-macros/tests/trybuild/websocket_gateway_invalid_target.rs
use nivasa_macros::websocket_gateway;

#[websocket_gateway("/ws")]
fn not_a_gateway() {}

fn main() {}
